@@ -719,7 +719,17 @@ function RefreshFavorites()
         //Utility Sensors
         $.each(data.result, function(i,item){
           if (
-                ( (typeof item.Counter != 'undefined') || (item.Type == "Current") || (item.Type == "Energy") || (item.Type == "Current/Energy") || (item.Type == "Air Quality") || (item.Type == "Moisture") || (item.Type == "Lux") || (item.Type == "Usage")) &&
+                ( 
+					(typeof item.Counter != 'undefined') || 
+					(item.Type == "Current") || 
+					(item.Type == "Energy") || 
+					(item.Type == "Current/Energy") || 
+					(item.Type == "Air Quality") || 
+					(item.Type == "Moisture") || 
+					(item.Type == "Lux") || 
+					(item.Type == "Usage")||
+					((item.Type == "Thermostat")&&(item.SubType=="SetPoint"))
+				) &&
                 (item.Favorite!=0)
               )
           {
@@ -744,6 +754,9 @@ function RefreshFavorites()
 								}
 								else if ((item.Type == "Energy")||(item.Type == "Air Quality")||(item.Type == "Moisture")||(item.Type == "Lux")||(item.Type == "Usage")) {
 									status+=item.Data;
+								}
+								else if ((item.Type == "Thermostat")&&(item.SubType=="SetPoint")) {
+									status+=item.Data + '\u00B0 C';
 								}
 								if (typeof item.Usage != 'undefined') {
 									if (data.DashboardType==0) {
@@ -810,6 +823,11 @@ function RefreshFavorites()
 									img='<img src="images/current48.png" height="40">';
 									status=item.Data;
 									bigtext=item.Data;
+								}
+								else if ((item.Type == "Thermostat")&&(item.SubType=="SetPoint")) {
+									img='<img src="images/override.png" height="40">';
+									status=item.Data + '\u00B0 C';
+									bigtext=item.Data + '\u00B0 C';
 								}
 								if (typeof item.Usage != 'undefined') {
 									bigtext=item.Usage;
@@ -1897,7 +1915,17 @@ function ShowFavorites()
         bHaveAddedDevider = false;
         $.each(data.result, function(i,item){
           if (
-                ( (typeof item.Counter != 'undefined') || (item.Type == "Current") || (item.Type == "Energy") || (item.Type == "Current/Energy") || (item.Type == "Air Quality") || (item.Type == "Moisture") || (item.Type == "Lux") || (item.Type == "Usage")) &&
+                ( 
+					(typeof item.Counter != 'undefined') || 
+					(item.Type == "Current") || 
+					(item.Type == "Energy") || 
+					(item.Type == "Current/Energy") || 
+					(item.Type == "Air Quality") || 
+					(item.Type == "Moisture") || 
+					(item.Type == "Lux") || 
+					(item.Type == "Usage")||
+					((item.Type == "Thermostat")&&(item.SubType=="SetPoint"))
+				) &&
                 (item.Favorite!=0)
               )
           {
@@ -1948,8 +1976,17 @@ function ShowFavorites()
 							else if ((item.Type == "Current") || (item.Type == "Current/Energy")){
 								status=item.Data;
 							}
-							else if ((item.Type == "Energy")||(item.Type == "Air Quality")||(item.Type == "Moisture")||(item.Type == "Lux")||(item.Type == "Usage")) {
+							else if (
+										(item.Type == "Energy")||
+										(item.Type == "Air Quality")||
+										(item.Type == "Moisture")||
+										(item.Type == "Lux")||
+										(item.Type == "Usage")
+									) {
 								status=item.Data;
+							}
+							else if ((item.Type == "Thermostat")&&(item.SubType=="SetPoint")) {
+								status=item.Data + '\u00B0 C';
 							}
 							if (typeof item.Usage != 'undefined') {
 								if (data.DashboardType==0) {
@@ -2016,6 +2053,9 @@ function ShowFavorites()
 							else if (item.Type == "Usage") {
 								xhtm+=item.Data;
 							}
+							else if ((item.Type == "Thermostat")&&(item.SubType=="SetPoint")) {
+								xhtm+=item.Data + '\u00B0 C';
+							}
 							xhtm+='</td>\n';
 							xhtm+='\t      <td id="img"><img src="images/';
 							var status="";
@@ -2051,6 +2091,10 @@ function ShowFavorites()
 							else if (item.Type == "Usage") {
 								xhtm+='current48.png" height="40"></td>\n';
 								status=item.Data;
+							}
+							else if ((item.Type == "Thermostat")&&(item.SubType=="SetPoint")) {
+								xhtm+='override.png" height="40"></td>\n';
+								status=item.Data + '\u00B0 C';
 							}
 							
 							if (typeof item.Usage != 'undefined') {
